# gamma

./: CMakeLists.txt  Doxyfile.in  MainPage.dox  README.md
src/: gamma.c  gamma.h  gamma_batch.c  gamma_batch.h  gamma_engine_help.c  gamma_engine_help.h  gamma_interactive.c  gamma_interactive.h  gamma_io.c  gamma_io.h  gamma_main.c  gamma_main_extra.c  gamma_main_extra.h  gamma_test.c
